# noteweave-skills

./: .gitignore  README.md  pyproject.toml
noteweave_skills/: __init__.py  __main__.py  cli.py
noteweave_skills/templates/cursor/skills/noteweave-analyze/: skill.md
noteweave_skills/templates/cursor/skills/noteweave-search/: skill.md
noteweave_skills/templates/cursor/skills/noteweave-write/: skill.md
noteweave_skills/templates/shared/: NOTEWEAVE.md  NOTEWEAVE_RULES.md
